--- a/app/client/templates/sidebar.html
+++ b/app/client/templates/sidebar.html
@@ -1,57 +1,42 @@
 <template name="sidebar">
-     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="slide-nav">
-  <div class="container">
-   <div class="navbar-header">
-    <a class="navbar-toggle"> 
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-     </a>
-    <a class="navbar-brand" href="#">Project name</a>
-   </div>
-   <div id="slidemenu">
-     
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="search" placeholder="search" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-primary">Search</button>
-          </form>
-     
-    <ul class="nav navbar-nav">
-     <li class="active"><a href="#">Home</a></li>
-     <li><a href="#about">About</a></li>
-     <li><a href="#contact">Contact</a></li>
-     <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-      <ul class="dropdown-menu">
-       <li><a href="#">Action</a></li>
-       <li><a href="#">Another action</a></li>
-       <li><a href="#">Something else here</a></li>
-       <li class="divider"></li>
-       <li class="dropdown-header">Nav header</li>
-       <li><a href="#">Separated link</a></li>
-       <li><a href="#">One more separated link</a></li>
-       <li><a href="#">Action</a></li>
-       <li><a href="#">Another action</a></li>
-       <li><a href="#">Something else here</a></li>
-       <li class="divider"></li>
-       <li class="dropdown-header">Nav header</li>
-       <li><a href="#">Separated link</a></li>
-       <li><a href="#">One more separated link</a></li>
-       <li><a href="#">Action</a></li>
-       <li><a href="#">Another action</a></li>
-       <li><a href="#">Something else here</a></li>
-       <li class="divider"></li>
-       <li class="dropdown-header">Nav header</li>
-       <li><a href="#">Separated link test long title goes here</a></li>
-       <li><a href="#">One more separated link</a></li>
-      </ul>
-     </li>
-    </ul>
-          
-   </div>
-  </div>
- </div>
+    	<!-- navbar -->
+	<div class="navbar">
+		<div class="container">
+			<div class="panel-control-left">
+				<a href="#" data-activates="slide-out-left" class="sidenav-control"><i class="fa fa-bars"></i></a>
+			</div>
+		</div>
+	</div>
+	<!-- end navbar -->
+
+	<!-- panel control -->
+<div class="panel-control-right">
+		<ul id="slide-out-left" class="side-nav collapsible"  data-collapsible="accordion">
+			<li>
+				<div class="photos">
+					<img src="img/photos.png" alt="">
+					<h3>Mario Doe</h3>
+				</div>
+			</li>
+
+			
+			<li>
+				<a href="login.html"><i class="fa fa-search"></i>Find a Buddy</a>
+			</li>
+			<li>
+				<a href="login.html"><i class="fa fa-user "></i>Profile</a>
+			</li>
+			<li>
+				<a href="register.html"><i class="fa fa-user-plus"></i>Chats</a>
+			</li>
+      <br> <hr>
+      <li>
+				<a href="/settings"><i class="fa fa-cog"></i>Settings</a>
+			</li>
+      <li>
+				<a href="#"><i class="fa fa-envelope"></i>About Us</a>
+			</li>
+		</ul>
+	</div>
   
 </template>
