User Authentication System Live

--- a/app/client/templates/sidebar.html
+++ b/app/client/templates/sidebar.html
@@ -5,6 +5,9 @@
 			<div class="panel-control-left">
 				<a href="#" data-activates="slide-out-left" class="sidenav-control"><i class="fa fa-bars"></i></a>
 			</div>
+			<div class="text-center">
+				BuddyApp
+			</div>
 		</div>
 	</div>
 	<!-- end navbar -->
@@ -14,8 +17,8 @@
 		<ul id="slide-out-left" class="side-nav collapsible"  data-collapsible="accordion">
 			<li>
 				<div class="photos">
-					<img src="img/photos.png" alt="">
-					<h3>Mario Doe</h3>
+					<img src="img/photos.jpg" alt="">
+					<h3>Hammad Siddiqui</h3>
 				</div>
 			</li>
 
@@ -30,11 +33,14 @@
 				<a href="register.html"><i class="fa fa-user-plus"></i>Chats</a>
 			</li>
       <br> <hr>
-      <li>
+    	    <li>
 				<a href="/settings"><i class="fa fa-cog"></i>Settings</a>
 			</li>
-      <li>
+      		<li>
 				<a href="#"><i class="fa fa-envelope"></i>About Us</a>
+			</li>
+      		<li>
+				<a href="#" class="js-logout"><i class="fa fa-sign-out"></i>Logout</a>
 			</li>
 		</ul>
 	</div>
