--- a/app/client/templates/login.html
+++ b/app/client/templates/login.html
@@ -1,6 +1,4 @@
 <template name="login">
-  
-	
 	<!-- login-->
 	<div class="login app-pages app-section">
 		<div class="container">
@@ -23,7 +21,7 @@
   					<label for="checkbox">Remember me</label>
 				</div>
 				<button class="button">Login</button>
-				<div class="create-account">Not Registered? <a href="#">Create an account</a></div>
+				<div class="create-account">Not Registered? <a href="/signup">Create an account</a></div>
 			</form>
 		</div>
 	</div>
