--- a/app/client/templates/home.html
+++ b/app/client/templates/home.html
@@ -1,3 +1,54 @@
 <template name="home">
     {{> sidebar}}
+	<!-- home -->
+	<div class="home-app app-pages app-section">
+		<div class="container">
+			<div class="pages-title">
+				<h3>What you wanna do?</h3>
+			</div>
+			<div class="row">
+				<div class="col s6">
+					<div class="entry">
+						<i class="fa fa-futbol-o" style="color:#333333"></i>
+						<h6>Sports</h6>
+					</div>
+				</div>
+				<div class="col s6">
+					<div class="entry">
+						<i class="fa fa-cutlery" style="color:#cccccc"></i>
+						<h6>Lunch</h6>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col s6">
+					<div class="entry">
+						<i class="fa fa-hand-peace-o" style="color:brown"></i>
+						<h6>Smoke</h6>
+					</div>
+				</div>
+				<div class="col s6">
+					<div class="entry">
+						<i class="fa fa-gamepad" style="color:green"></i>
+						<h6>Xbox</h6>
+					</div>
+				</div>
+			</div>
+            <div class="row">
+				<div class="col s6">
+					<div class="entry">
+						<i class="fa fa-book" style="color:yellow"></i>
+						<h6>Study</h6>
+					</div>
+				</div>
+				<div class="col s6">
+					<div class="entry">
+						<i class="fa fa-users" style="color:blue"></i>
+						<h6>Network</h6>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end home -->
 </template>
