Home page complete

--- a/app/client/templates/home.html
+++ b/app/client/templates/home.html
@@ -8,44 +8,58 @@
 			</div>
 			<div class="row">
 				<div class="col s6">
-					<div class="entry">
-						<i class="fa fa-futbol-o" style="color:#333333"></i>
-						<h6>Sports</h6>
-					</div>
+					<a href="#">
+						<div class="entry">
+							<i class="fa fa-futbol-o" style="color:#333333"></i>
+							<h6>Sports</h6>
+						</div>
+					</a>
+					
 				</div>
 				<div class="col s6">
-					<div class="entry">
-						<i class="fa fa-cutlery" style="color:#cccccc"></i>
-						<h6>Lunch</h6>
-					</div>
+					<a href="#">
+						<div class="entry">
+							<i class="fa fa-cutlery" style="color:#cccccc"></i>
+							<h6>Lunch</h6>
+						</div>
+					</a>
 				</div>
 			</div>
 			<div class="row">
+				
 				<div class="col s6">
-					<div class="entry">
-						<i class="fa fa-hand-peace-o" style="color:brown"></i>
-						<h6>Smoke</h6>
-					</div>
+					<a href="#">
+						<div class="entry">
+							<i class="fa fa-hand-peace-o" style="color:brown"></i>
+							<h6>Smoke</h6>
+						</div>
+					</a>
 				</div>
 				<div class="col s6">
-					<div class="entry">
-						<i class="fa fa-gamepad" style="color:green"></i>
-						<h6>Xbox</h6>
-					</div>
+					<a href="#">
+						<div class="entry">
+							<i class="fa fa-gamepad" style="color:green"></i>
+							<h6>Xbox</h6>
+						</div>
+					</a>
 				</div>
 			</div>
             <div class="row">
 				<div class="col s6">
-					<div class="entry">
-						<i class="fa fa-book" style="color:yellow"></i>
-						<h6>Study</h6>
-					</div>
+					<a href="#">
+						<div class="entry">
+							<i class="fa fa-book" style="color:yellow"></i>
+							<h6>Study</h6>
+						</div>
+					</a>
 				</div>
 				<div class="col s6">
-					<div class="entry">
-						<i class="fa fa-users" style="color:blue"></i>
-						<h6>Network</h6>
-					</div>
+					<a href="#">
+						<div class="entry">
+							<i class="fa fa-users" style="color:blue"></i>
+							<h6>Network</h6>
+						</div>
+					</a>
 				</div>
 			</div>
 		</div>
