--- a/app/client/templates/sidebar.html
+++ b/app/client/templates/sidebar.html
@@ -6,7 +6,7 @@
 				<a href="#" data-activates="slide-out-left" class="sidenav-control"><i class="fa fa-bars"></i></a>
 			</div>
 			<div class="text-center">
-				BuddyApp
+				<h2>BuddyApp</h2>
 			</div>
 		</div>
 	</div>
