--- a/app/client/templates/sidebar.html
+++ b/app/client/templates/sidebar.html
@@ -18,7 +18,7 @@
 			<li>
 				<div class="photos">
 					<img src="img/photos.jpg" alt="">
-					<h3>Hammad Siddiqui</h3>
+					<h3>{{ profileName }}</h3>
 				</div>
 			</li>
 
