--- a/app/client/templates/home.html
+++ b/app/client/templates/home.html
@@ -11,7 +11,7 @@
 					<a href="#">
 						<div class="entry">
 							<i class="fa fa-futbol-o" style="color:#333333"></i>
-							<h6>Sports</h6>
+							<h5>Sports</h5>
 						</div>
 					</a>
 					
@@ -20,7 +20,7 @@
 					<a href="#">
 						<div class="entry">
 							<i class="fa fa-cutlery" style="color:#cccccc"></i>
-							<h6>Lunch</h6>
+							<h5>Lunch</h5>
 						</div>
 					</a>
 				</div>
@@ -30,16 +30,16 @@
 				<div class="col s6">
 					<a href="#">
 						<div class="entry">
-							<i class="fa fa-hand-peace-o" style="color:brown"></i>
-							<h6>Smoke</h6>
+							<i class="fa fa-hand-peace-o" style="color:#FD2822"></i>
+							<h5>Smoke</h5>
 						</div>
 					</a>
 				</div>
 				<div class="col s6">
 					<a href="#">
 						<div class="entry">
-							<i class="fa fa-gamepad" style="color:green"></i>
-							<h6>Xbox</h6>
+							<i class="fa fa-gamepad" style="color:#05B364"></i>
+							<h5>Xbox</h5>
 						</div>
 					</a>
 				</div>
@@ -48,16 +48,16 @@
 				<div class="col s6">
 					<a href="#">
 						<div class="entry">
-							<i class="fa fa-book" style="color:yellow"></i>
-							<h6>Study</h6>
+							<i class="fa fa-book" style="color:#FCD74C"></i>
+							<h5>Study</h5>
 						</div>
 					</a>
 				</div>
 				<div class="col s6">
 					<a href="#">
 						<div class="entry">
-							<i class="fa fa-users" style="color:blue"></i>
-							<h6>Network</h6>
+							<i class="fa fa-users" style="color:#397FF2"></i>
+							<h5>Network</h5>
 						</div>
 					</a>
 				</div>
