--- a/app/client/templates/sidebar.html
+++ b/app/client/templates/sidebar.html
@@ -21,16 +21,14 @@
 					<h3>{{ profileName }}</h3>
 				</div>
 			</li>
-
-			
 			<li>
-				<a href="login.html"><i class="fa fa-search"></i>Find a Buddy</a>
+				<a href="/activities"><i class="fa fa-search"></i>Find a Buddy</a>
 			</li>
 			<li>
-				<a href="login.html"><i class="fa fa-user "></i>Profile</a>
+				<a href="/profile"><i class="fa fa-user "></i>Profile</a>
 			</li>
 			<li>
-				<a href="register.html"><i class="fa fa-user-plus"></i>Chats</a>
+				<a href="/chats"><i class="fa fa-user-plus"></i>Chats</a>
 			</li>
       <br> <hr>
     	    <li>
