--- a/app/client/templates/login.html
+++ b/app/client/templates/login.html
@@ -3,6 +3,7 @@
 	<div class="login app-pages app-section">
 		<div class="container">
 			<div class="pages-title">
+				<h1>Buddy App</h1>
 				<h3>Login</h3>
                 {{> flashMessages}}
 			</div>
