--- a/app/client/templates/sports.html
+++ b/app/client/templates/sports.html
@@ -1,19 +1,17 @@
-<template name="home">
+<template name="sports"> 
     {{> sidebar}}
-	<!-- home -->
-	<div class="home-app app-pages app-section">
-
-
+	<!-- subSports -->
+	<div class="sports-app app-pages app-section">
 		<div class="container">
 			<div class="pages-title">
-				<h3>What you wanna do?</h3>
+				<h3>What sport you wanna play</h3>
 			</div>
 			<div class="row">
 				<div class="col s6">
 					<a href="#">
 						<div class="entry">
-							<img src="img/tennis-court.png" alt="sports">
-							<h5>Sports</h5>
+							<img src="img/tennis.png" alt="tennis">
+							<h5>Tennis</h5>
 						</div>
 					</a>
 					
@@ -21,51 +19,52 @@
 				<div class="col s6">
 					<a href="#">
 						<div class="entry">
-							<img src="img/fried-chicken.png" alt="lunch">
-							<h5>Lunch</h5>
+							<img src="img/basketball.png" alt="basketball">
+							<h5>Basketball</h5>
 						</div>
 					</a>
 				</div>
 			</div>
-
 			<div class="row">
 				
 				<div class="col s6">
 					<a href="#">
 						<div class="entry">
-							<img src="img/cigarette.png" alt="smoke">
-							<h5>Smoke</h5>
+							<img src="img/dumbbell.png" alt="gym">
+							<h5>Gym</h5>
 						</div>
 					</a>
 				</div>
 				<div class="col s6">
 					<a href="#">
 						<div class="entry">
-							<img src="img/xbox.png" alt="xbox">
-							<h5>Xbox</h5>
+							<img src="img/goggles.png" alt="swim">
+							<h5>Swim</h5>
 						</div>
 					</a>
 				</div>
 			</div>
-            <div class="row">
+				<div class="row">
+				
 				<div class="col s6">
 					<a href="#">
 						<div class="entry">
-							<img src="img/notebook.png" alt="study">
-							<h5>Study</h5>
+							<img src="img/ping-pong.png" alt="ping-pong">
+							<h5>Table Tennis</h5>
 						</div>
 					</a>
 				</div>
 				<div class="col s6">
 					<a href="#">
 						<div class="entry">
-							<img src="img/users.png" alt="network">
-							<h5>Network</h5>
+							<img src="img/football.png" alt="football">
+							<h5>Football</h5>
 						</div>
 					</a>
 				</div>
 			</div>
+       
 		</div>
 	</div>
-	<!-- end home -->
+	<!-- end subSports -->
 </template>
