--- a/app/client/templates/sidebar.html
+++ b/app/client/templates/sidebar.html
@@ -22,7 +22,10 @@
 				</div>
 			</li>
 			<li>
-				<a href="/"><i class="fa fa-search"></i>Find a Buddy</a>
+				<a href="/"><i class="fa fa-search"></i>Let's do something!</a>
+			</li>
+			<li>
+				<a href="/activities"><i class="fa fa-search"></i>Find a Buddy</a>
 			</li>
 			<li>
 				<a href="/profile"><i class="fa fa-user "></i>Profile</a>
