--- a/app/client/templates/schedule.html
+++ b/app/client/templates/schedule.html
@@ -6,19 +6,20 @@
 			<div class="pages-title">
 				<h3>Schedule</h3>
 			</div>
+			<form id="js-schedule-form">
 			<div class="row">
 				<div class="col s12">
-					 <form action="#">
+					 
                         <p class="range-field">
-                        <input type="date" class="datepicker" placeholder="Choose Date">
+                        <input name="date" required type="date" class="datepicker" placeholder="Choose Date">
                         </p>
-                    </form>
+                    
 				</div>
 			</div>
 			<div class="row">
                     <div class="input-field col s12">
                         <label for="timepicker_ampm_dark">Pick Time</label>
-                        <input id="timepicker_ampm_dark" class="timepicker" type="time">
+                        <input name="time" required id="timepicker_ampm_dark" class="timepicker" type="time">
                     </div>
              </div>
 			 <div class="row">
@@ -27,6 +28,7 @@
 					</button>
 				</div>
 			</div>
+			</form>
 		</div>
 		</div>
 	
